grammar
expr   -> binary | unary | group | lit 
lit    -> NUMBER+ | NUMBER+ ( "ms" | "s" | "min" | "h" | "d" | "w" | "y" ) | "true" | "false"
binary -> expr op expr
unary  -> ( "!" | "_" ) expr
group  -> "(" expr ")"
op     -> "+" | "-" | "*" | "/" | "%" | "==" | "!=" | "<" | "<=" | ">" | ">="


expr        -> equal
equal       -> comp ( ( "!=" | "==" ) comp )*
comp        -> term ( ( ">" | ">=" | "<" | "<=" ) term )*
term        -> factor ( ( "+" | "-" ) factor )*
factor      -> unary ( ( "/" | "*" | "%" ) unary )*
unary       -> ( "!" | "-" ) unary | primary
primary     -> NUMBER+
             | NUMBER+ ( "ms" | "s" | "min" | "h" | "d" | "w" | "y" )
             | "true"
             | "false"
             | "(" expr ")"
